welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:5: error: ';' expected but ')' found.
  nbBscuits = nbBiscuits + 1)
                            ^Poucet:7: error: ')' expected but 'if' found.
  if nbBiscuits >= 3 {
  ^Poucet:13: error: 'while' expected but '{' found.
}{
 ^Poucet:16: error: '(' expected but ';' found.
    avance(); 
^